--- a/app/src/main/res/layout/activity_alert_messages.xml
+++ b/app/src/main/res/layout/activity_alert_messages.xml
@@ -31,4 +31,14 @@
         android:layout_below="@id/btnSnack"
         android:layout_centerInParent="true"
         android:id="@+id/btnAlert"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDialog"
+        android:text="Dialog"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/btnAlert"
+
+        />
 </RelativeLayout>
