update and delete with recyclervview

--- a/app/src/main/res/layout/dialog_design.xml
+++ b/app/src/main/res/layout/dialog_design.xml
@@ -19,6 +19,20 @@
         android:layout_height="wrap_content"
         android:hint="Enter Your Name"/>
 
+    <EditText
+        android:id="@+id/etRollNo"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter Your ROll No"/>
+
+    <EditText
+        android:id="@+id/etContact"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter Your Contact No"/>
+
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
@@ -26,5 +40,6 @@
         android:layout_margin="10dp"
         android:layout_gravity="center"
         android:text="Save"/>
+
 
 </LinearLayout>
