--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/recyclerFragment">
+    app:startDestination="@id/spinnerFragment">
 
     <fragment
         android:id="@+id/firstFragment"
@@ -30,4 +30,9 @@
         android:name="com.coderroots.kotlinclass6week.fragments.RecyclerFragment"
         android:label="fragment_recycler"
         tools:layout="@layout/fragment_recycler" />
+    <fragment
+        android:id="@+id/spinnerFragment"
+        android:name="com.coderroots.kotlinclass6week.fragments.SpinnerFragment"
+        android:label="fragment_spinner"
+        tools:layout="@layout/fragment_spinner" />
 </navigation>
