--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context=".BottomFragment">
+    tools:context=".bottomnavigation.BottomFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
