--- a/app/src/main/res/layout/fragment_first_practice.xml
+++ b/app/src/main/res/layout/fragment_first_practice.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:background="@color/red"
     android:layout_height="match_parent"
-    tools:context=".FirstPracticeFragment">
+    tools:context=".practiceBottom.FirstPracticeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
