--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -21,4 +21,10 @@
         android:layout_marginTop="30dp"
         android:id="@+id/btnImage"/>
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20sp"
+        android:id="@+id/tvText"/>
 </LinearLayout>
